--- a/FantasyForge/FantasyForge.vcxproj
+++ b/FantasyForge/FantasyForge.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -189,6 +189,7 @@
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Transformable.cpp" />
     <ClCompile Include="TypeWriter.cpp" />
+    <ClCompile Include="UserInterface.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -216,6 +217,7 @@
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Transformable.h" />
     <ClInclude Include="TypeWriter.h" />
+    <ClInclude Include="UserInterface.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Win32Includes.h" />
     <ClInclude Include="Window.h" />
