--- a/FantasyForge/FantasyForge.vcxproj
+++ b/FantasyForge/FantasyForge.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="Camera2D.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="FantasyForge.cpp" />
+    <ClCompile Include="Field.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="GraphicText.cpp" />
     <ClCompile Include="Image.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="Clock.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Field.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="GraphicText.h" />
     <ClInclude Include="Image.h" />
