Controller support via XInput

--- a/FantasyForge/FantasyForge.vcxproj.filters
+++ b/FantasyForge/FantasyForge.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="Field.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Controller.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseException.h">
@@ -196,6 +199,9 @@
     </ClInclude>
     <ClInclude Include="Field.h">
       <Filter>Graphics\Bitmap</Filter>
+    </ClInclude>
+    <ClInclude Include="Controller.h">
+      <Filter>Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
