--- a/FantasyForge/FantasyForge.vcxproj
+++ b/FantasyForge/FantasyForge.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="BaseException.cpp" />
     <ClCompile Include="Camera2D.cpp" />
+    <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="FantasyForge.cpp" />
     <ClCompile Include="Field.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="Camera2D.h" />
     <ClInclude Include="Clock.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Controller.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Field.h" />
     <ClInclude Include="Graphics.h" />
